opam-version: "2.0"
name:         "bert"
bug-reports:  "https://github.com/LaurentMazare/ocaml-bert/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-bert"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-bert.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]
version:      "dev"

run-test: [["dune" "runtest" "-p" name "-j" jobs]]
build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "base" {>= "v0.14"}
  "cmdliner"
  "uutf"
  "dune" {>= "1.3.0" build}
  "torch" {>= "0.10"}
  "ocaml" {>= "4.08"}
  "ppx_custom_printf" {>= "v0.14"}
  "ppx_expect" {>= "v0.14"}
  "ppx_sexp_conv" {>= "v0.14"}
  "sexplib" {>= "v0.14"}
  "stdio" {>= "v0.14"}
  "re" {>= "1.9.0"}
  "yojson" {>= "1.7.0"}
]

available: os = "linux" | os = "macos"

synopsis: "BERT-like models for OCaml"
description: """
Provide various Natural Language Processing models based on transformers archictecture.
These relies on ocaml-torch so that models can be run on GPUs.
"""
